<resources>
    <string name="app_name">TriviaGame</string>
    <string name="your_score_0">Your Score: 0</string>
    <string name="play_again">Play Again</string>
    <string name="science">Science</string>
    <string name="history">History</string>
    <string name="sports">Sports</string>
    <string name="select_a_category">Select a Category</string>
    <string name="hello">Hello</string>
    <string name="trivia_game">Trivia Game</string>
    <string name="user_name">User name</string>
    <string name="start_game">Start Game</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="time_30">Time: 30</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
</resources>