<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/backgqus">

    <TextView
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:layout_marginBottom="16dp"
      />

    <Button
        android:backgroundTint="@color/black"
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/option_1"
        />


    <Button
        android:backgroundTint="@color/black"
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/option_2"
    />

    <Button
        android:backgroundTint="@color/black"
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/option_3"
    />

    <Button
        android:backgroundTint="@color/black"
        android:id="@+id/option4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/option_4"
    />


    <TextView
        android:id="@+id/timerText"
        android:layout_width="177dp"
        android:layout_height="74dp"
        android:text="@string/time_30"
        android:textColor="@color/black"
        android:textSize="30sp" />


</LinearLayout>