<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/score">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:padding="16dp"
        android:orientation="vertical">

        <TableRow tools:ignore="UselessParent">

            <TextView
                android:id="@+id/usersName"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/usersScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="8dp"
                android:text="@string/score"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="50dp"
        android:layout_marginBottom="16dp"
        android:text="@string/your_score_0"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:backgroundTint="@color/black"
        android:id="@+id/playAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:text="@string/play_again" />

</LinearLayout>

